--- a/src/components/pages/TestMain/Header/SearchForm.css
+++ b/src/components/pages/TestMain/Header/SearchForm.css
@@ -1,7 +1,25 @@
-.input {
-	all: unset;
+.search-form {
+	display: flex;
+	position: relative;
+	z-index: 1;
+	border-radius: 20px;
+	box-shadow: 5px, 5px, 10px, black;
+	border: 1px solid;
+	height: 40px;
+	justify-content: center;
+	align-items: center;
+	padding-right: 2%;
 }
 
-.button {
-	all: unset;
+.search-form input {
+	all: initial;
+	width: 40%;
+	margin-left: 2%;
+	margin-right: 2%;
+	padding-left: 1%;
+	padding-right: 1%;
+}
+
+.search-form button {
+	/* all: initial; */
 }
