--- a/src/components/pages/TestMain/Main/MainSlide.css
+++ b/src/components/pages/TestMain/Main/MainSlide.css
@@ -1,5 +1,31 @@
+.img {
+	padding-left: 0%;
+	padding-right: 0%;
+	object-fit: cover;
+}
+
 .container {
 	display: flex;
-	flex-direction: row;
 	justify-content: space-around;
+	height: 100%;
+}
+
+.slide {
+	display: flex;
+	/* flex: 1; */
+	max-width: 100%;
+	justify-content: space-around;
+	height: 100%;
+	/* overflow: hidden; */
+}
+
+.item {
+	display: flex;
+	/* flex: 1; */
+	border: 1px solid;
+	border-radius: 15px;
+	height: 80%;
+	margin-left: 1%;
+	margin-right: 1%;
+	justify-content: center;
 }
