--- a/src/components/pages/TestMain/Header/Header.module.css
+++ b/src/components/pages/TestMain/Header/Header.module.css
@@ -1,7 +1,11 @@
 .container {
 	display: flex;
 	justify-content: center;
-	margin: 1% 0;
+	margin: 0;
+	padding-top: 20px;
+	padding-bottom: 30px;
+	height: 40px;
+	border-bottom: 1px solid rgb(199, 199, 199);
 }
 
 .sub-container {
