--- a/src/components/pages/TestMain/Header/SearchForm.module.css
+++ b/src/components/pages/TestMain/Header/SearchForm.module.css
@@ -5,8 +5,8 @@
     position: relative;
     z-index: 1;
     border-radius: 20px;
-    box-shadow: 0px 6px 10px 0px #0000006e;
-    border: 1px solid;
+    box-shadow: 0px 2px 3px 0px #0000006e;
+    /* border: 1px solid; */
     height: 40px;
     padding-right: 2%;
 }
@@ -18,4 +18,5 @@
 	margin-right: 2%;
 	padding-left: 1%;
 	padding-right: 1%;
+    border-bottom: 1px solid rgb(199, 199, 199);
 }
