--- a/src/components/pages/TestMain/Main/Main.module.css
+++ b/src/components/pages/TestMain/Main/Main.module.css
@@ -1,5 +1,6 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	border: 1px solid;
+	/* border: 1px solid; */
+	border-bottom: 1px solid rgb(199, 199, 199);
 }
