--- a/src/components/pages/TestMain/Main/MainSlide.module.css
+++ b/src/components/pages/TestMain/Main/MainSlide.module.css
@@ -10,9 +10,12 @@ img {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 100%;
+	/* height: 100%; */
+	height: 400px;
+	padding: 1%;
 	overflow: hidden;
-	border: 1px solid;
+	/* border: 1px solid; */
+	border-bottom: 1px solid rgb(199, 199, 199);
 }
 
 .arrow {
@@ -30,18 +33,18 @@ img {
 .slide-show {
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
 	max-width: 100%;
-	height: 100%;
-	position: relative;
+	flex: 1;
+	height: 400px;
 	padding: 20px;
 }
 
 .item {
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	border-radius: 15px;
-	height: 360px;
+	height: 355px;
 	margin-left: 1%;
 	margin-right: 1%;
-	position: relative;
 	overflow: hidden;
 }
