--- a/src/components/pages/TestMain/Main/MainSlide.module.css
+++ b/src/components/pages/TestMain/Main/MainSlide.module.css
@@ -10,12 +10,33 @@ img {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	/* height: 100%; */
 	height: 400px;
+	flex: 1;
 	padding: 1%;
-	overflow: hidden;
-	/* border: 1px solid; */
+	/* overflow: hidden; */
 	border-bottom: 1px solid rgb(199, 199, 199);
+}
+
+.sub-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	width: 100%;
+}
+
+.slide-tag {
+	display: flex;
+	justify-content: flex-start;
+	color: red;
+}
+
+.slide-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 100%;
 }
 
 .arrow {
@@ -35,15 +56,14 @@ img {
 	justify-content: space-around;
 	align-items: center;
 	max-width: 100%;
-	flex: 1;
-	height: 400px;
+	width: 100%;
+	height: auto;
 	padding: 20px;
 }
 
 .item {
-	/* border: 1px solid black; */
 	border-radius: 15px;
-	height: 355px;
+	height: 340px;
 	margin-left: 1%;
 	margin-right: 1%;
 	overflow: hidden;
