--- a/src/components/TestMain/Main/MainItem.module.css
+++ b/src/components/TestMain/Main/MainItem.module.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
 	border-radius: 15px;
-    width: 275px;
-    height: 355px;
+    min-width: 262px;
+    height: 336px;
     cursor: pointer;
 }
 
